@@ -1,6 +1,8 @@
 Changes in 0.61.11:
   * A bug that caused a database deadlock when removing entries from the
     changeset cache in the repository server has been fixed.
+  * Added RegularExpressionList in conarycfg
+  * Added lockTroves configuration option for autolock
 
 Changes in 0.61.10:
   * The conary update command now takes a --sync parameter, documented in 
